--- a/coplime_client_web/web/users/verNotificaciones.xhtml
+++ b/coplime_client_web/web/users/verNotificaciones.xhtml
@@ -23,8 +23,8 @@
                     <p:panelGrid columns="4" styleClass="centrar">
                         <f:facet name="header">Listado de notificaciones</f:facet>
                         
-                        <p:dataTable value="#{NotificacionVerListado.listaAllNotif}" var="notif" 
-                                     filteredValue="#{NotificacionVerListado.filteredNotif}"
+                        <p:dataTable value="#{mantenedorNotificacionVerListadoMB.listaAllNotif}" var="notif" 
+                                     filteredValue="#{mantenedorNotificacionVerListadoMB.filteredNotif}"
                                      emptyMessage="No hay notificaciones para usted"
                                      widgetVar="tablaListado">
                             <p:column id="numColumn" sortBy="#{notif.num}" headerText="N°" filterBy="#{notif.num}" filterMatchMode="contains">
@@ -40,17 +40,17 @@
                                 <p:selectBooleanCheckbox value="#{notif.revisado}"/>
                             </p:column>
                             <p:column headerText="  " >
-                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-search ui-icon" action="#{NotificacionVerListado.verDetalles(notif.num)}">
+                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-search ui-icon" action="#{mantenedorNotificacionVerListadoMB.verDetalles(notif.num)}">
                                 </p:commandLink>
                             </p:column>                            
                             <p:column headerText="  " >
-                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-trash ui-icon" action="#{NotificacionVerListado.eliminar(notif.num)}">
+                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-trash ui-icon" action="#{mantenedorNotificacionVerListadoMB.eliminar(notif.num)}">
                                 </p:commandLink>
                             </p:column>
                         </p:dataTable>
                         
                         <f:facet name="footer">
-                            <p:commandButton value="Volver" action="#{NotificacionVerListado.volver()}"/>
+                            <p:commandButton value="Volver" action="#{mantenedorNotificacionVerListadoMB.volver()}"/>
                         </f:facet>
                     </p:panelGrid>
                 </h:form>
