mas arreglos y agregar punto limpio funciona

--- a/coplime_client_web/web/mainTemplate.xhtml
+++ b/coplime_client_web/web/mainTemplate.xhtml
@@ -64,7 +64,7 @@
                     <h:outputLink value="#{request.contextPath}/faces/users/verOperariosMantencion.xhtml">Ver operarios de mantención</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/verInspectores.xhtml">Ver inspectores</h:outputLink>
                     <h:outputLink value="#{request.contextPath}/faces/users/inspector/agregarRevisionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
-                    <h:outputLink value="#{request.contextPath}/faces/users/inspector/solicitarMantencionPuntoLimpio.xhtml">Agregar revisión de punto limpio</h:outputLink>
+                    <h:outputLink value="#{request.contextPath}/faces/users/inspector/solicitarMantencionPuntoLimpio.xhtml">Solicitar una mantención de punto limpio</h:outputLink>
                     <h:outputLink >Generar reportes</h:outputLink>
                     <h:outputLink >Ayuda</h:outputLink>
                     <h:commandLink action="#{autenticadorMB.logout()}">Cerrar sesión</h:commandLink>
