--- a/coplime_client_web/web/users/admin/verDetallesAdministrador.xhtml
+++ b/coplime_client_web/web/users/admin/verDetallesAdministrador.xhtml
@@ -41,7 +41,7 @@
                          
                           <f:facet name="footer">
                             
-                            <p:commandButton value="Volver" action="#{mantenedorAdministradorVerDetallesMB.volver()}"/>                         
+                            <p:commandButton value="Volver" action="#{mantenedorAdministradorVerDetallesMB.volverToLista()}"/>                         
                          </f:facet>
                      </p:panelGrid>                
                 </h:form>               
