--- a/coplime_client_web/web/users/verDetallesRevision.xhtml
+++ b/coplime_client_web/web/users/verDetallesRevision.xhtml
@@ -35,7 +35,7 @@
                          
                          
                          <f:facet name="footer">
-                            <p:commandButton value="Volver" action="#{mantenedorRevisionVerDetallesMB.volver()}"/>                         
+                            <p:commandButton value="Volver" action="#{mantenedorRevisionVerDetallesMB.volverToLista()}"/>                         
                          </f:facet>
                      </p:panelGrid>                
                 </h:form>               
