--- a/coplime_client_web/web/users/verSolicitudesMantencion.xhtml
+++ b/coplime_client_web/web/users/verSolicitudesMantencion.xhtml
@@ -13,7 +13,7 @@
 
             <ui:define name="centro">
                 <h:form>
-                    <p:panelGrid columns="6" styleClass="centrar" >
+                    <p:panelGrid columns="7" styleClass="centrar" >
                         <f:facet name="header">Listado de solicitudes de mantención</f:facet>
 
                         <p:dataTable value="#{mantenedorSolicitudVerListadoMB.lista}" var="solMant" 
@@ -28,8 +28,11 @@
                             <p:column headerText="Fecha" sortBy="#{solMant.fecha}" filterMatchMode="contains" filterBy="#{solMant.fecha}">
                                 <h:outputText value="#{solMant.fecha}"/>
                             </p:column>
-                            <p:column headerText="Usuario emisor" >
-                                <h:outputText value="#{solMant.usuario}"/>
+                            <p:column headerText="Inspector emisor" rendered="#{request.isUserInRole('Administrador') || request.isUserInRole('Operario')}">
+                                <h:outputText value="#{solMant.usuarioEmisor}" />
+                            </p:column>
+                            <p:column headerText="Operario asignado" >
+                                <h:outputText value="#{solMant.usuarioReceptor}"/>
                             </p:column>
                             <p:column headerText="Revisada" >
                                 <p:selectBooleanCheckbox value="#{solMant.revisada}"/>
