Agregando más comentarios a los sessionBeans

--- a/coplime_client_web/web/users/admin/agregarAdministrador.xhtml
+++ b/coplime_client_web/web/users/admin/agregarAdministrador.xhtml
@@ -43,7 +43,7 @@
                          <p:inputText value="#{mantenedorAdministradorAgregarMB.username}" required="true"/>
                          
                          <p:outputLabel value="Contraseña"/>
-                         <p:inputText value="#{mantenedorAdministradorAgregarMB.password}" required="true" type="password"/>
+                         <p:outputLabel value="Será la misma que su rut"/>
                          
                          <f:facet name="footer">
                             <p:commandButton value="Guardar" action="#{mantenedorAdministradorAgregarMB.agregarAdministrador()}"/>
