--- a/coplime_client_web/web/users/admin/agregarOperarioMantencion.xhtml
+++ b/coplime_client_web/web/users/admin/agregarOperarioMantencion.xhtml
@@ -43,7 +43,7 @@
                          <p:inputText value="#{mantenedorOperarioAgregarMB.username}" required="true"/>
                          
                          <p:outputLabel value="Contraseña"/>
-                         <p:inputText value="#{mantenedorOperarioAgregarMB.password}" required="true" type="password"/>
+                         <p:outputLabel value="Será la misma que su rut"/>
                          
                          <f:facet name="footer">
                              <p:commandButton value="Guardar" action="#{mantenedorOperarioAgregarMB.agregarOperario()}"/>
