--- a/coplime_client_web/web/users/admin/agregarInspector.xhtml
+++ b/coplime_client_web/web/users/admin/agregarInspector.xhtml
@@ -43,7 +43,7 @@
                          <p:inputText value="#{mantenedorInspectorAgregarMB.username}" required="true"/>
                          
                          <p:outputLabel value="Contraseña"/>
-                         <p:inputText value="#{mantenedorInspectorAgregarMB.password}" required="true" type="password"/>
+                         <p:outputLabel value="Será la misma que su rut"/>
                          
                          <f:facet name="footer">
                             <p:commandButton value="Guardar" action="#{mantenedorInspectorAgregarMB.agregarInspector()}"/>
