Agregando boton de la casita

--- a/coplime_client_web/web/users/admin/editarPuntoLimpio.xhtml
+++ b/coplime_client_web/web/users/admin/editarPuntoLimpio.xhtml
@@ -7,7 +7,8 @@
       xmlns:p="http://primefaces.org/ui"
       xmlns:pm="http://primefaces.org/mobile"
       contentType="text/html"
-        renderKitId="PRIMEFACES_MOBILE">
+      xmlns:ezcomp="http://java.sun.com/jsf/composite/ezcomp"
+      renderKitId="PRIMEFACES_MOBILE">
     
     
     <pm:page title="Editar punto limpio">
