--- a/coplime_client_web/web/users/verDetallesNotificacion.xhtml
+++ b/coplime_client_web/web/users/verDetallesNotificacion.xhtml
@@ -15,7 +15,7 @@
             <ui:define name="titulo">Ver notificaciones</ui:define>
             
             <ui:define name="botonesBarra">
-                <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{Autenticador.indexLoggued()}" />
+                <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{autenticadorMB.indexLoggued()}" />
             </ui:define>
             
             <ui:define name="centro">
