--- a/coplime_client_web/web/users/verSolicitudesMantencion.xhtml
+++ b/coplime_client_web/web/users/verSolicitudesMantencion.xhtml
@@ -5,11 +5,14 @@
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
       xmlns:p="http://primefaces.org/ui"
-      contentType="text/html">
+      contentType="text/html"
+      xmlns:ezcomp="http://java.sun.com/jsf/composite/ezcomp">
     <body>
         <ui:composition template="/mainTemplate.xhtml">
             <ui:define name="titulo" >Ver solicitudes de mantención</ui:define>
-
+            <ui:define name="botonesBarra">
+                <ezcomp:boton_barra_superior classIcon="ui-icon-home" title="Ir al inicio" action="#{autenticadorMB.indexLoggued()}" />
+            </ui:define>
 
             <ui:define name="centro">
                 <h:form>
