agregado mensaje "no ha seleccionado puntoLimpio"

--- a/coplime_client_web/web/selectPtoLimpioAviso.xhtml
+++ b/coplime_client_web/web/selectPtoLimpioAviso.xhtml
@@ -32,7 +32,7 @@
                         </p:selectOneListbox>
                         
                         <f:facet name="footer">
-                            <p:commandButton value="Siguiente" action="#{enviarAvisoIncidenciaMB.goToEnviarAviso(enviarAvisoIncidenciaMB.numPuntoLimpio)}"></p:commandButton>
+                            <p:commandButton value="Siguiente" action="#{enviarAvisoIncidenciaMB.goToEnviarAviso()}"></p:commandButton>
                         </f:facet>
                     </p:panelGrid>
                 </h:form>
