agregados check revisado a notificación
Además es posible eliminar una notificación

--- a/coplime_client_web/web/mainTemplate.xhtml
+++ b/coplime_client_web/web/mainTemplate.xhtml
@@ -149,7 +149,9 @@
             </div>
         </div>
         <div class="sobreBarra">
-            <p:growl id="growl_msj_accion" />
+            <h:form id="formMsj">
+                <p:growl id="growl_msj_accion" />
+            </h:form>
         </div>
     </body>
 </html>
