--- a/coplime_client_web/web/users/admin/verAdministradores.xhtml
+++ b/coplime_client_web/web/users/admin/verAdministradores.xhtml
@@ -42,7 +42,7 @@
                                 </p:commandLink>
                             </p:column>
                             <p:column headerText=""  rendered="#{request.isUserInRole('Administrador')}">
-                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-trash ui-icon" onclick="cd_#{adm.num}.show()" />
+                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-trash ui-icon" onclick="cd_#{adm.num}.show();" />
                                 
                                 <p:confirmDialog message="¿Está seguro que desea eliminar el administrador?"
                                                  header="Confirmación de eliminación de administrador" severity="alert"
