--- a/coplime_client_web/web/users/verOperariosMantencion.xhtml
+++ b/coplime_client_web/web/users/verOperariosMantencion.xhtml
@@ -43,7 +43,7 @@
                                 </p:commandLink>
                             </p:column>
                             <p:column headerText="" rendered="#{request.isUserInRole('Administrador')}">
-                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-trash ui-icon" onclick="cd_#{op.num}.show()" />
+                                <p:commandLink value="  " styleClass=" ui-btn ui-icon-shadow ui-icon-trash ui-icon" onclick="cd_#{op.num}.show();" />
                                 
                                 <p:confirmDialog message="¿Está seguro que desea eliminar el operario de mantención?"
                                                  header="Confirmación de eliminación de operario de mantención" severity="alert"
