se muestra mensaje al cambiar pass e infoUser

--- a/coplime_client_web/web/users/infoUsuario.xhtml
+++ b/coplime_client_web/web/users/infoUsuario.xhtml
@@ -35,7 +35,7 @@
                             <p:outputLabel value="#{infoUsuarioMB.rut}" />
                             
                             <p:outputLabel value="Nombre de usuario"/>
-                            <p:outputLabel value="#{infoUsuarioMB.idUsuario}" />
+                            <p:outputLabel value="#{infoUsuarioMB.username}" />
                             
                             <p:outputLabel value="Rol de usuario"/>
                             <p:outputLabel value="#{infoUsuarioMB.rol}" />
