agregadas validaciones al agregar usuarios

--- a/coplime_client_web/web/users/infoUsuario.xhtml
+++ b/coplime_client_web/web/users/infoUsuario.xhtml
@@ -58,7 +58,7 @@
                                 <p:commandButton value="Cambiar contraseña" action="#{infoUsuarioMB.goToCambiarContrasegna()}"/>
                              
                                 <p:commandButton value="Guardar cambios" action="#{infoUsuarioMB.guardarCambios()}"/>
-                                <p:commandButton value="Cancelar" action="#{infoUsuarioMB.goToPuntosLimpios()}"/>
+                                <p:commandButton value="Volver" action="#{infoUsuarioMB.goToPuntosLimpios()}"/>
                             </f:facet>
 
                         </p:panelGrid>
