validaciones a mantenedores de usuarios completa

--- a/coplime_client_web/web/users/admin/agregarAdministrador.xhtml
+++ b/coplime_client_web/web/users/admin/agregarAdministrador.xhtml
@@ -56,7 +56,7 @@
                          
                          <f:facet name="footer">
                             <p:commandButton value="Guardar" ajax="false" action="#{mantenedorAdministradorAgregarMB.agregarAdministrador()}"/>
-                            <p:commandButton immediate="true" value="Volver" action="#{mantenedorAdministradorAgregarMB.volver()}"/>                         
+                            <p:commandButton immediate="true" value="Volver" action="#{mantenedorAdministradorAgregarMB.volverToLista()}"/>                         
                          </f:facet>
                      </p:panelGrid>                
                 </h:form>               
