--- a/coplime_client_web/web/users/verInspectores.xhtml
+++ b/coplime_client_web/web/users/verInspectores.xhtml
@@ -49,7 +49,7 @@
                                                  header="Confirmación de eliminación de inspector" severity="alert"
                                                  widgetVar="cd_#{insp.num}" closeOnEscape="true">
                                     <p:commandButton value="Si" actionListener="#{mantenedorInspectorVerListadoMB.eliminar(insp.num)}"
-                                                     oncomplete="cd_#{insp.num}.hide();"/>
+                                                     oncomplete="cd_#{insp.num}.hide();" ajax="false"/>
                                     <p:commandButton value="No" onclick="cd_#{insp.num}.hide();" type="button" />
                                 </p:confirmDialog>
                                
