Históricos de contenedores al modificarlos

--- a/coplime_client_web/web/users/verSolicitudesMantencion.xhtml
+++ b/coplime_client_web/web/users/verSolicitudesMantencion.xhtml
@@ -48,6 +48,7 @@
                         
                         
                         <f:facet name="footer">
+                            <p:button value="Solicitar mantención" href="/faces/users/inspector/solicitarMantencionPuntoLimpio.xhtml" rendered="#{request.isUserInRole('Inspector')}"/>
                             <p:commandButton value="Volver" action="#{mantenedorSolicitudVerListadoMB.volver()}"/>
                         </f:facet>
                     </p:panelGrid>
